# localedata

./: .gitignore  EastAsianWidth.patch  Makefile  generate_eaw.rb  generate_runewidth_table.rb  generate_tables.rb  generate_wcwidth9.rb  justfile  lib.rb  pyproject.toml  pyrightconfig.json  utf8_gen.py
.github/workflows/: release.yml
src/char/: __init__.py
src/char/emoji/: __init__.py  emoji_range.py  match_group.py  pattern.py
src/char/non_printable/: __init__.py
src/char/single_width/: __init__.py  latin_letters_and_others.py
src/char/zero_width/: __init__.py
src/chars/: __init__.py  match_group.py  pattern.py
src/chars/char_ranges/: __init__.py  char_range.py
src/chars/tables/: __init__.py
src/code_range/: __init__.py
src/code_ranges/: __init__.py
src/generate/east_asian_width_txt/: __init__.py  __main__.py
src/generate/lookup_rs/: __init__.py  __main__.py
src/generate/runewidth_table_go/: __init__.py  __main__.py
src/generate/tables_rs/: __init__.py  __main__.py
src/generate/util/cache/: __init__.py  __main__.py
src/generate/util/jinja2/: __init__.py
src/generate/wcwidth9_h/: __init__.py  __main__.py
src/generate/wcwidth9_py/: __init__.py  __main__.py
src/ucd/: __init__.py
templates/: DerivedEastAsianWidth.txt.j2  EastAsianWidth.txt.j2  lookup.j2  lookup.rs.j2  runewidth_table.j2  tables.j2  wcwidth9.h.j2  wcwidth9.j2  wcwidth9.py.j2
tests/char/: test_operator.py
tests/char/emoji/: test_emoji_ranges.py
tests/chars/: test_chars.py
tests/code_range/: test_code_range.py  test_operator.py
unicode/custom_width/: 00_NerdFonts.txt  01_FiraCode.txt  10_Extra.txt  20_RegionalIndicators.txt  90_PrivateUseArea.txt
