[tool.poetry]
name = "localedata"
version = "0.1.0"
description = ""
authors = ["nobody <nobody@nowhere>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.291"
yapf = "^0.32.0"
isort = "^5.12.0"
pytest = "^7.2.1"
pytest-picked = "^0.4.6"
pytest-testmon = "^1.4.5"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rA"
testpaths = ["tests"]

[tool.yapf]
based_on_style = "pep8"
dedent_closing_brackets = true
coalesce_brackets = true
blank_line_before_nested_class_or_def = true
column_limit = 120

[tool.isort]
combine_as_imports = true
